feat(build): Add an execute JAR feature
- remove run.sh script
- enhance the build.sh script with a 'run' option, building the JAR if necessary.